fix the X-coordinate overflow on the missions page in mobile devices

--- a/src/components/MissionItem.scss
+++ b/src/components/MissionItem.scss
@@ -94,7 +94,6 @@ table {
 
 @media only screen and (max-width: 1100px) {
   table {
-    overflow-x: auto;
     gap: 2rem;
 
     th {
